# WMS_PIA_BACKEND_V2

./: .env  .gitignore  Cargo.toml  README.md  local_env
src/: main.rs
src/database/: connection.rs
src/models/: files.rs  mc_cliente_cnt.rs  mc_consolidado.rs  mc_parkenor.rs  mod.rs  pedido_prov.rs  user_model.rs
src/repository/: mod.rs  mongodb_repo_files.rs  mssql_repo.rs
src/routes/: crm_fuxion_template_upload.rs  crm_logistica_nacional.rs  crm_parkenor.rs  crm_plantilla_upload.rs  crm_routes.rs  crm_upload_files.rs  mod.rs  pedido_routes.rs  user_api.rs
src/utils/: json_utils.rs  mod.rs
