[package]
name = "actix-mongo-api-jwt"
version = "0.1.0"
authors = ["Edwin Ortega <edwin.maurizio.ortega@gmail.com>"]
edition = "2021"

[dependencies]
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls" , "mssql" ] }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.3.0"




