[package]
name = "wms-pia-backend"
version = "0.1.0"
authors = ["Edwin Ortega <edwin.maurizio.ortega@gmail.com>"]
edition = "2021"

[dependencies]
#No cambiar esta versión de sqlx
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls" , "mssql" ] }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.3.0"
actix-cors = "0.6.4"
chrono = "0.4"
dotenv = "0.15.0"
futures = "0.3"
actix-multipart = "0.6.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]




