[package]
name = "wms-pia-backend"
version = "0.1.0"
authors = ["Edwin Ortega <edwin.maurizio.ortega@gmail.com>"]
edition = "2021"

[dependencies]
#No cambiar esta versión de sqlx
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls" , "mssql" ] }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.3.0"
actix-cors = "0.6.4"
chrono = "0.4"
dotenv = "0.15.0"
futures = "0.3"
actix-multipart = "0.6.0"
rand = "0.8"
lettre = "0.11.0"
argon2 = "0.5.1"
jsonwebtoken = "9.0.0"
log = "0.4"
env_logger = "0.10.0"
calamine = "0.22.1"
tiberius = "0.12.2"
tokio-util = "0.7.9"

[dependencies.mongodb]
version = "2.6.0"
default-features = false
features = ["async-std-runtime"]




